// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitButton renders correctly with disabled 1`] = `
<div
  className="l3-style-split-button l3-style-split-button--kind-primary l3-style-split-button--color-primary l3-style-split-button--disabled"
  role="button"
>
  <button
    aria-busy={false}
    aria-disabled={true}
    className="l3-style-split-button__main-button l3-style-button l3-style-button--size-medium l3-style-button--kind-primary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--prevent-click-animation l3-style-button--disabled"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="l3-style-split-button__secondary-button-wrapper"
  >
    <span
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={true}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="l3-style-split-button__secondary-button l3-style-button l3-style-button--size-medium l3-style-button--kind-primary l3-style-button--color-primary l3-style-button--left-flat l3-style-button--prevent-click-animation l3-style-button--no-side-padding l3-style-button--disabled"
        data-testid="button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="l3-style-split-button__secondary-button-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with left icon 1`] = `
<div
  className="l3-style-split-button l3-style-split-button--kind-primary l3-style-split-button--color-primary"
  role="button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="l3-style-split-button__main-button l3-style-button l3-style-button--size-medium l3-style-button--kind-primary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--prevent-click-animation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="icon_component icon_component--no-focus-style"
      fill="currentColor"
      height="20"
      onClick={[Function]}
      viewBox="0 0 32 32"
      width="20"
    >
      <g
        filter="url(#filter0_bd_5309_45047)"
      >
        <path
          d="M12.6437 22.8305L12.8689 22.384H12.8689L12.6437 22.8305ZM11.957 22.1507L12.4016 21.9218H12.4016L11.957 22.1507ZM21.043 22.1507L20.5984 21.9218H20.5984L21.043 22.1507ZM20.3563 22.8305L20.1311 22.384H20.1311L20.3563 22.8305ZM11 11.6111C10.7239 11.6111 10.5 11.835 10.5 12.1111C10.5 12.3873 10.7239 12.6111 11 12.6111V11.6111ZM22 12.6111C22.2761 12.6111 22.5 12.3873 22.5 12.1111C22.5 11.835 22.2761 11.6111 22 11.6111V12.6111ZM20.7143 12.1111V20.5111H21.7143V12.1111H20.7143ZM18.7 22.5H14.3V23.5H18.7V22.5ZM11.2857 12.1111V20.5111H12.2857V12.1111H11.2857ZM14.3 22.5C13.8518 22.5 13.5454 22.4996 13.3082 22.4804C13.0767 22.4617 12.9552 22.4275 12.8689 22.384L12.4186 23.2769C12.6684 23.4029 12.935 23.4535 13.2276 23.4772C13.5145 23.5004 13.8681 23.5 14.3 23.5V22.5ZM11.2857 20.5111C11.2857 20.9384 11.2853 21.2892 11.3088 21.5739C11.3328 21.8646 11.3842 22.1304 11.5124 22.3795L12.4016 21.9218C12.3585 21.8381 12.3243 21.7197 12.3054 21.4917C12.2861 21.2576 12.2857 20.955 12.2857 20.5111H11.2857ZM12.8689 22.384C12.6669 22.2821 12.5036 22.12 12.4016 21.9218L11.5124 22.3795C11.7117 22.7667 12.0292 23.0805 12.4186 23.2769L12.8689 22.384ZM20.7143 20.5111C20.7143 20.955 20.7139 21.2576 20.6946 21.4917C20.6757 21.7197 20.6415 21.8381 20.5984 21.9218L21.4876 22.3795C21.6158 22.1304 21.6672 21.8646 21.6912 21.5739C21.7147 21.2892 21.7143 20.9384 21.7143 20.5111H20.7143ZM18.7 23.5C19.1319 23.5 19.4855 23.5004 19.7724 23.4772C20.065 23.4535 20.3316 23.4029 20.5814 23.2769L20.1311 22.384C20.0448 22.4275 19.9233 22.4617 19.6918 22.4804C19.4546 22.4996 19.1482 22.5 18.7 22.5V23.5ZM20.5984 21.9218C20.4964 22.12 20.3331 22.2821 20.1311 22.384L20.5814 23.2769C20.9708 23.0805 21.2883 22.7667 21.4876 22.3795L20.5984 21.9218ZM11 12.6111H11.7857V11.6111H11V12.6111ZM11.7857 12.6111H21.2143V11.6111H11.7857V12.6111ZM21.2143 12.6111H22V11.6111H21.2143V12.6111ZM14.25 11.4889C14.25 10.4362 15.2093 9.5 16.5 9.5V8.5C14.7532 8.5 13.25 9.79241 13.25 11.4889H14.25ZM16.5 9.5C17.7907 9.5 18.75 10.4362 18.75 11.4889H19.75C19.75 9.79241 18.2468 8.5 16.5 8.5V9.5ZM13.25 11.4889V12.1111H14.25V11.4889H13.25ZM18.75 11.4889V12.1111H19.75V11.4889H18.75Z"
          fill="#fff"
        />
      </g>
      <defs>
        <filter
          colorInterpolationFilters="sRGB"
          filterUnits="userSpaceOnUse"
          height="52"
          id="filter0_bd_5309_45047"
          width="52"
          x="-10"
          y="-10"
        >
          <feFlood
            floodOpacity="0"
            result="BackgroundImageFix"
          />
          <feGaussianBlur
            in="BackgroundImageFix"
            stdDeviation="5"
          />
          <feComposite
            in2="SourceAlpha"
            operator="in"
            result="effect1_backgroundBlur_5309_45047"
          />
          <feColorMatrix
            in="SourceAlpha"
            result="hardAlpha"
            values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
          />
          <feOffset
            dy="1"
          />
          <feGaussianBlur
            stdDeviation="1.5"
          />
          <feColorMatrix
            values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0"
          />
          <feBlend
            in2="effect1_backgroundBlur_5309_45047"
            result="effect2_dropShadow_5309_45047"
          />
          <feBlend
            in="SourceGraphic"
            in2="effect2_dropShadow_5309_45047"
            result="shape"
          />
        </filter>
      </defs>
    </svg>
  </button>
  <div
    className="l3-style-split-button__secondary-button-wrapper"
  >
    <span
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="l3-style-split-button__secondary-button l3-style-button l3-style-button--size-medium l3-style-button--kind-primary l3-style-button--color-primary l3-style-button--left-flat l3-style-button--prevent-click-animation l3-style-button--no-side-padding"
        data-testid="button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="l3-style-split-button__secondary-button-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with medium dialog padding size 1`] = `
<div
  className="l3-style-split-button l3-style-split-button--kind-primary l3-style-split-button--color-primary"
  role="button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="l3-style-split-button__main-button l3-style-button l3-style-button--size-medium l3-style-button--kind-primary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--prevent-click-animation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="l3-style-split-button__secondary-button-wrapper"
  >
    <span
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="l3-style-split-button__secondary-button l3-style-button l3-style-button--size-medium l3-style-button--kind-primary l3-style-button--color-primary l3-style-button--left-flat l3-style-button--prevent-click-animation l3-style-button--no-side-padding"
        data-testid="button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="l3-style-split-button__secondary-button-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with only required props 1`] = `
<div
  className="l3-style-split-button l3-style-split-button--kind-primary l3-style-split-button--color-primary"
  role="button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="l3-style-split-button__main-button l3-style-button l3-style-button--size-medium l3-style-button--kind-primary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--prevent-click-animation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="l3-style-split-button__secondary-button-wrapper"
  >
    <span
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="l3-style-split-button__secondary-button l3-style-button l3-style-button--size-medium l3-style-button--kind-primary l3-style-button--color-primary l3-style-button--left-flat l3-style-button--prevent-click-animation l3-style-button--no-side-padding"
        data-testid="button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="l3-style-split-button__secondary-button-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with right icon 1`] = `
<div
  className="l3-style-split-button l3-style-split-button--kind-primary l3-style-split-button--color-primary"
  role="button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="l3-style-split-button__main-button l3-style-button l3-style-button--size-medium l3-style-button--kind-primary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--prevent-click-animation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="icon_component icon_component--no-focus-style"
      fill="currentColor"
      height="20"
      onClick={[Function]}
      viewBox="0 0 32 32"
      width="20"
    >
      <g
        filter="url(#filter0_bd_5309_45047)"
      >
        <path
          d="M12.6437 22.8305L12.8689 22.384H12.8689L12.6437 22.8305ZM11.957 22.1507L12.4016 21.9218H12.4016L11.957 22.1507ZM21.043 22.1507L20.5984 21.9218H20.5984L21.043 22.1507ZM20.3563 22.8305L20.1311 22.384H20.1311L20.3563 22.8305ZM11 11.6111C10.7239 11.6111 10.5 11.835 10.5 12.1111C10.5 12.3873 10.7239 12.6111 11 12.6111V11.6111ZM22 12.6111C22.2761 12.6111 22.5 12.3873 22.5 12.1111C22.5 11.835 22.2761 11.6111 22 11.6111V12.6111ZM20.7143 12.1111V20.5111H21.7143V12.1111H20.7143ZM18.7 22.5H14.3V23.5H18.7V22.5ZM11.2857 12.1111V20.5111H12.2857V12.1111H11.2857ZM14.3 22.5C13.8518 22.5 13.5454 22.4996 13.3082 22.4804C13.0767 22.4617 12.9552 22.4275 12.8689 22.384L12.4186 23.2769C12.6684 23.4029 12.935 23.4535 13.2276 23.4772C13.5145 23.5004 13.8681 23.5 14.3 23.5V22.5ZM11.2857 20.5111C11.2857 20.9384 11.2853 21.2892 11.3088 21.5739C11.3328 21.8646 11.3842 22.1304 11.5124 22.3795L12.4016 21.9218C12.3585 21.8381 12.3243 21.7197 12.3054 21.4917C12.2861 21.2576 12.2857 20.955 12.2857 20.5111H11.2857ZM12.8689 22.384C12.6669 22.2821 12.5036 22.12 12.4016 21.9218L11.5124 22.3795C11.7117 22.7667 12.0292 23.0805 12.4186 23.2769L12.8689 22.384ZM20.7143 20.5111C20.7143 20.955 20.7139 21.2576 20.6946 21.4917C20.6757 21.7197 20.6415 21.8381 20.5984 21.9218L21.4876 22.3795C21.6158 22.1304 21.6672 21.8646 21.6912 21.5739C21.7147 21.2892 21.7143 20.9384 21.7143 20.5111H20.7143ZM18.7 23.5C19.1319 23.5 19.4855 23.5004 19.7724 23.4772C20.065 23.4535 20.3316 23.4029 20.5814 23.2769L20.1311 22.384C20.0448 22.4275 19.9233 22.4617 19.6918 22.4804C19.4546 22.4996 19.1482 22.5 18.7 22.5V23.5ZM20.5984 21.9218C20.4964 22.12 20.3331 22.2821 20.1311 22.384L20.5814 23.2769C20.9708 23.0805 21.2883 22.7667 21.4876 22.3795L20.5984 21.9218ZM11 12.6111H11.7857V11.6111H11V12.6111ZM11.7857 12.6111H21.2143V11.6111H11.7857V12.6111ZM21.2143 12.6111H22V11.6111H21.2143V12.6111ZM14.25 11.4889C14.25 10.4362 15.2093 9.5 16.5 9.5V8.5C14.7532 8.5 13.25 9.79241 13.25 11.4889H14.25ZM16.5 9.5C17.7907 9.5 18.75 10.4362 18.75 11.4889H19.75C19.75 9.79241 18.2468 8.5 16.5 8.5V9.5ZM13.25 11.4889V12.1111H14.25V11.4889H13.25ZM18.75 11.4889V12.1111H19.75V11.4889H18.75Z"
          fill="#fff"
        />
      </g>
      <defs>
        <filter
          colorInterpolationFilters="sRGB"
          filterUnits="userSpaceOnUse"
          height="52"
          id="filter0_bd_5309_45047"
          width="52"
          x="-10"
          y="-10"
        >
          <feFlood
            floodOpacity="0"
            result="BackgroundImageFix"
          />
          <feGaussianBlur
            in="BackgroundImageFix"
            stdDeviation="5"
          />
          <feComposite
            in2="SourceAlpha"
            operator="in"
            result="effect1_backgroundBlur_5309_45047"
          />
          <feColorMatrix
            in="SourceAlpha"
            result="hardAlpha"
            values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
          />
          <feOffset
            dy="1"
          />
          <feGaussianBlur
            stdDeviation="1.5"
          />
          <feColorMatrix
            values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0"
          />
          <feBlend
            in2="effect1_backgroundBlur_5309_45047"
            result="effect2_dropShadow_5309_45047"
          />
          <feBlend
            in="SourceGraphic"
            in2="effect2_dropShadow_5309_45047"
            result="shape"
          />
        </filter>
      </defs>
    </svg>
  </button>
  <div
    className="l3-style-split-button__secondary-button-wrapper"
  >
    <span
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="l3-style-split-button__secondary-button l3-style-button l3-style-button--size-medium l3-style-button--kind-primary l3-style-button--color-primary l3-style-button--left-flat l3-style-button--prevent-click-animation l3-style-button--no-side-padding"
        data-testid="button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="l3-style-split-button__secondary-button-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with secondary position 1`] = `
<div
  className="l3-style-split-button l3-style-split-button--kind-primary l3-style-split-button--color-primary"
  role="button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="l3-style-split-button__main-button l3-style-button l3-style-button--size-medium l3-style-button--kind-primary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--prevent-click-animation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="l3-style-split-button__secondary-button-wrapper"
  >
    <span
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="l3-style-split-button__secondary-button l3-style-button l3-style-button--size-medium l3-style-button--kind-primary l3-style-button--color-primary l3-style-button--left-flat l3-style-button--prevent-click-animation l3-style-button--no-side-padding"
        data-testid="button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="l3-style-split-button__secondary-button-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with tertiary button 1`] = `
<div
  className="l3-style-split-button l3-style-split-button--kind-tertiary l3-style-split-button--color-primary"
  role="button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="l3-style-split-button__main-button l3-style-button l3-style-button--size-medium l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--prevent-click-animation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="l3-style-split-button__secondary-button-wrapper"
  >
    <span
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="l3-style-split-button__secondary-button l3-style-button l3-style-button--size-medium l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--left-flat l3-style-button--prevent-click-animation l3-style-button--no-side-padding"
        data-testid="button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="l3-style-split-button__secondary-button-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with zIndex 1`] = `
<div
  className="l3-style-split-button l3-style-split-button--kind-primary l3-style-split-button--color-primary"
  role="button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="l3-style-split-button__main-button l3-style-button l3-style-button--size-medium l3-style-button--kind-primary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--prevent-click-animation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="l3-style-split-button__secondary-button-wrapper"
  >
    <span
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="l3-style-split-button__secondary-button l3-style-button l3-style-button--size-medium l3-style-button--kind-primary l3-style-button--color-primary l3-style-button--left-flat l3-style-button--prevent-click-animation l3-style-button--no-side-padding"
        data-testid="button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="l3-style-split-button__secondary-button-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;
